--- a/templates/posts/list.html
+++ b/templates/posts/list.html
@@ -10,4 +10,4 @@
     <li><a href="{% url 'detail' post.pk %}">{{ post.title }}</a></li>
     {% endfor %}
 </ul>
-{% endblock %}
+{% endblock content %}
