--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,6 @@
                 <div class="navbar-nav">
                     <a class="nav-link text-light" href="{% url 'about' %}">About</a>
                     <a class="nav-link text-light" href="{% url 'list' %}">Posts</a>
-
                     {% if user.is_authenticated %}
                     <form method="POST" action="{% url 'logout' %}" class="d-inline">
                         {% csrf_token %}
@@ -41,6 +40,10 @@
     <div class="container wrapper mt-4">
         {% block content %}{% endblock content %}
     </div>
+
+    <footer class="text-center mt-5 py-3" style="background-color: #003366;">
+        <p class="text-light mb-0">&copy; 2025 Big Blue's Blog. All rights reserved.</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
