--- a/templates/posts/edit.html
+++ b/templates/posts/edit.html
@@ -1,13 +1,25 @@
 {% extends 'base.html' %}
 
-
 {% block title %}Edit Post{% endblock title %}
 
 {% block content %}
-<h1>Edit Post</h1>
-<form method="Post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" class="btn btn-success" value="Save Edits">
-</form>
+<div class="container mt-5">
+    <!-- Hero Section -->
+    <div class="jumbotron text-center hero-section">
+        <h1 class="display-4">Edit Post</h1>
+        <p class="lead">Make changes to your post below.</p>
+    </div>
+
+    <!-- Edit Form -->
+    <div class="mt-5">
+        <form method="POST" class="row g-3">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <div class="col-12">
+                <input type="submit" class="btn btn-gold" value="Save Edits">
+                <a href="{% url 'detail' post.id %}" class="btn btn-secondary">Cancel</a>
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock content %}
