--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,13 +1,28 @@
 {% extends 'base.html' %}
 
-{% block title %}Login{% endblock %}
+{% block title %}Login{% endblock title %}
 
 {% block content %}
-<h2>Login</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Login</button>
-</form>
-<p>Don't have an account? <a href="{% url 'signup' %}">Sign up</a></p>
-{% endblock %}
+<div class="container mt-5">
+    <!-- Hero Section -->
+    <div class="jumbotron text-center hero-section">
+        <h1 class="display-4">Login</h1>
+        <p class="lead">Welcome back! Log in to access your account.</p>
+    </div>
+
+    <!-- Login Form -->
+    <div class="mt-5">
+        <h2 class="text-primary">Login</h2>
+        <form method="POST" class="row g-3">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <div class="col-12">
+                <button type="submit" class="btn btn-gold">Login</button>
+            </div>
+        </form>
+        <p class="mt-3 text-secondary">
+            Don't have an account? <a href="{% url 'signup' %}" class="text-warning">Sign up</a>
+        </p>
+    </div>
+</div>
+{% endblock content %}
