--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -8,7 +8,7 @@
     <div class="jumbotron text-center hero-section">
         <h1 class="display-4">Welcome to Big Blue's Blog!</h1>
         <p class="lead">Discover more about us and our journey.</p>
-        <a href="#learn-more" class="btn btn-lg btn-gold">Learn More</a>
+        <a href="{% url 'contact' %}" class="btn btn-lg btn-gold">Learn More</a>
     </div>
 
     <!-- About Section -->
