--- a/templates/base.html
+++ b/templates/base.html
@@ -24,12 +24,17 @@
                 <div class="navbar-nav">
                     <a class="nav-link text-light" href="{% url 'about' %}">About</a>
                     <a class="nav-link text-light" href="{% url 'list' %}">Posts</a>
+                    <a class="nav-link text-light" href="{% url 'new' %}">New Post</a>
+                    <a class="nav-link text-light" href="{% url 'archives' %}">Archives</a>
+                    <a class="nav-link text-light" href="{% url 'drafts' %}">Drafts</a>
+                    <a class="nav-link text-light" href="{% url 'contact' %}">Contact</a>
                     {% if user.is_authenticated %}
                     <form method="POST" action="{% url 'logout' %}" class="d-inline">
                         {% csrf_token %}
                         <input type="submit" class="btn btn-link nav-link text-light" value="Log Out">
                     </form>
                     {% else %}
+                    <a class="nav-link text-light" href="{% url 'signup' %}">Sign Up</a>
                     <a class="nav-link text-light" href="{% url 'login' %}">Log In</a>
                     {% endif %}
                 </div>
