--- a/templates/403.html
+++ b/templates/403.html
@@ -3,6 +3,8 @@
 {% block title %}Forbidden (403){% endblock title %}
 
 {% block content %}
-<h1>Forbidden</h1>
-<p>You do not have the privilege to do this</p>
+<div class="jumbotron hero-section text-center">
+    <h1 class="display-4">Forbidden</h1>
+    <p class="lead">You do not have the privilege to do this.</p>
+</div>
 {% endblock content %}
