--- a/templates/404.html
+++ b/templates/404.html
@@ -3,6 +3,8 @@
 {% block title %}Not Found (404){% endblock title %}
 
 {% block content %}
-<h1>Not Found</h1>
-<p>The page or resource you requested was not found on this server</p>
+<div class="jumbotron hero-section text-center">
+    <h1 class="display-4">Not Found</h1>
+    <p class="lead">The page or resource you requested was not found on this server.</p>
+</div>
 {% endblock content %}
