--- a/templates/posts/edit.html
+++ b/templates/posts/edit.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block title %}Edit Post{% endblock title %}
 
@@ -14,7 +15,7 @@
     <div class="mt-5">
         <form method="POST" class="row g-3">
             {% csrf_token %}
-            {{ form.as_p }}
+            {{ form | crispy }}
             <div class="col-12">
                 <input type="submit" class="btn btn-gold" value="Save Edits">
                 <a href="{% url 'detail' post.id %}" class="btn btn-secondary">Cancel</a>
