--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load crispy_forms_tags %}
 {% block title %}Create an Account!{% endblock title %}
 
 {% block content %}
@@ -15,9 +15,9 @@
         <h2 class="text-primary">Sign Up</h2>
         <form method="POST" class="row g-3">
             {% csrf_token %}
-            {{ form.as_p }}
+            {{ form | crispy }}
             <div class="col-12">
-                <button type="submit" class="btn btn-gold">Sign Up</button>
+                <button type="submit" class="btn btn-primary">Sign Up</button>
             </div>
         </form>
     </div>
